some calc stuff, fix for title clipping in webkit.

--- a/style/index.scss
+++ b/style/index.scss
@@ -110,8 +110,9 @@ background: -moz-linear-gradient(top,  rgba(65,192,255,1) 0%, rgba(64,144,255,1)
 background: -webkit-linear-gradient(top,  rgba(65,192,255,1) 0%,rgba(64,144,255,1) 100%);
 background: linear-gradient(to bottom,  rgba(65,192,255,1) 0%,rgba(64,144,255,1) 100%);
 box-shadow: inset 0 0 26px #3c84eb;
-height: 224px;
-padding-top: 200px;
+height: calc(100vh - 200px);
+padding-top: 190px;
+box-sizing: border-box;
 	h1 {
 		text-align: center;
 		font-size: 3em;
@@ -123,6 +124,8 @@ padding-top: 200px;
   		-ms-transform: rotate(-5deg); /* IE 9 */
     -webkit-transform: rotate(-5deg); /* Safari */
     transform: rotate(-5deg);
+    padding-top: 10px;
+    margin-left:-26px;
 	}
 	p {
 		text-align: center;
